Project ReConnectMindHealth_CBT {
  database_type: "MySQL"
  Note: "Lược đồ CSDL module Goal Setting, Fear Ladder, Behavioral Experiment và kho CBT"
}

Table patient_profiles {
  user_id uuid [pk]
  nickname varchar(255)
  current_program_week int
  current_cycle_start_date datetime
  therapy_program_started_at datetime
  graduated_at datetime
}

Table patient_goals {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  goal_type varchar(32)
  description text
  status varchar(32)
  created_at datetime
}

Table lsas_situations {
  id uuid [pk]
  situation_number int [not null, unique]
  text varchar(1000) [not null]
}

Table fear_ladder_items {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  situation_id uuid [not null, ref: > lsas_situations.id]
  bucket varchar(20)
  ladder_order int
  status varchar(32)
  unlocked bool
  mastered bool
  target_fear_score int
  target_avoidance_score int
}

Table behavioral_experiments {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  fear_ladder_item_id uuid [not null, ref: > fear_ladder_items.id]
  source_type varchar(32)
  status varchar(32)
  prediction text
  prediction_belief_before int
  prediction_belief_after int
  safety_behaviors_to_drop text
  outcome text
  learning text
  assigned_at datetime
  started_at datetime
  completed_at datetime
}

Table quest_templates {
  id uuid [pk]
  title varchar(255)
  category varchar(50)
  difficulty varchar(50)
  module_code varchar(100)
  program_week int
  program_phase_code varchar(100)
  intervention_type varchar(100)
  therapist_only_assignable bool
  prerequisite_codes_json longtext
  is_locked_hard bool
}

Table patient_quests {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  quest_template_id uuid [ref: > quest_templates.id]
  assigned_by_therapist_id uuid
  source_type varchar(32)
  status varchar(32)
  assigned_at datetime
  completed_at datetime
  mastery_score int
  pleasure_score int
}
